refactor: map으로 순서 유지